--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "A simple Slack app to find what instance a Salesforce domain belongs to",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node src/app.js"
   },
   "dependencies": {
     "@slack/bolt": "^3.4.0",
     "axios": "0.24.0"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/remix/slack-bolt-track-helloworld"
+    "url": "git@github.com:markgarg/slack-app-find-my-salesforce-instance.git"
   },
   "license": "MIT",
   "keywords": [
